--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/custom-theme.scss"
             ],
+            
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -89,6 +91,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -96,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "f1a7bbca-ea38-4cfe-b0b7-13bc60347855"
   }
 }
