--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/angular": "^31.0.2",
+    "@ag-grid-community/client-side-row-model": "^31.0.3",
+    "@ag-grid-community/styles": "^31.0.2",
     "@angular/animations": "^17.1.0",
+    "@angular/cdk": "^17.1.1",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
-    "@angular/forms": "^17.1.0",
+    "@angular/forms": "^17.1.2",
+    "@angular/material": "^17.1.1",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.0",
+    "ag-grid-angular": "^31.0.2",
+    "ag-grid-community": "^31.0.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
